# my-home-dashboard

./: .gitignore  ARCHITECTURE.md  README.md  STATE.md  app.py  chapter_1.py  chapter_10.py  chapter_11.py  chapter_2.py  chapter_3.py  chapter_4.py  chapter_5.py  chapter_6.py  chapter_7.py  chapter_8.py  chapter_9.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  strategy_macro.py  strategy_negotiation.py  strategy_syndication.py
.github/workflows/: test.yml
.streamlit/: secrets.toml.example
_legacy/: README.md  app.py
app/models/: ai.py  cashflow.py  constants.py  property.py  tenant.py
app/repositories/: gemini_client.py  openai_client.py  secrets.py
app/services/: ai_advisor.py  cashflow.py  decision_engine.py  leverage.py  liquidity.py  mortgage.py  presale_filter.py  pricing.py  tax.py  tenant_radar.py
app/ui/: router.py
app/ui/components/: metric_grid.py  verdict.py
app/ui/pages/: chapter_10_decision.py  chapter_11_combat.py  chapter_1_cashflow.py  chapter_2_presale.py  chapter_3_rental.py  chapter_4_refinance.py  chapter_5_resale.py  chapter_6_tax.py  chapter_7_exit.py  chapter_8_advanced.py  chapter_9_ai.py  strategy_macro.py  strategy_negotiation.py  strategy_syndication.py
tests/repositories/: test_gemini_client.py  test_openai_client.py  test_secrets.py
tests/services/: test_ai_advisor.py  test_cashflow.py  test_decision_engine.py  test_leverage.py  test_liquidity.py  test_mortgage.py  test_presale_filter.py  test_pricing.py  test_tax.py  test_tenant_radar.py
